[tool.poetry]
name = "traveltime-python-sdk"
version = "0.1.0"
description = ""
authors = ["MichaelRoentgen <39051208+MichaelRoentgen@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "traveltime_python_sdk"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.5"
geojson-pydantic = "^0.5.0"
aiohttp = "^3.8.4"
aiohttp-retry = "^2.8.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
